--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,29 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+	<style type="text/css">
+		.login-form {
+			width: 340px;
+			margin: 50px auto;
+		}
+		.login-form form {
+			margin-bottom: 15px;
+			background: #f7f7f7;
+			box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+			padding: 30px;
+		}
+		.login-form h2 {
+			margin: 0 0 15px;
+		}
+		.form-control, .btn {
+			min-height: 38px;
+			border-radius: 2px;
+		}
+		.btn {        
+			font-size: 15px;
+			font-weight: bold;
+		}
+	</style>
   </head>
   <body>
     <!-- Navigation -->
@@ -43,12 +66,19 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h1 class="mt-5">A Bootstrap 4 Starter Template</h1>
-        <p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
-        <ul class="list-unstyled">
-          <li>Bootstrap 4.3.1</li>
-          <li>jQuery 3.4.1</li>
-        </ul>
+        <p class="lead">
+			<div class="login-form">
+				<form action="/submit" method="post">
+					<h2 class="text-center">Log in</h2>       
+					<div class="form-group">
+						<input type="text" class="form-control" name="name" placeholder="Username" required="required">
+					</div>
+					<div class="form-group">
+						<button type="submit" class="btn btn-primary btn-block">Log in</button>
+					</div>      
+				</form>
+			</div>
+		</p>
       </div>
     </div>
   </div>
