--- a/views/index.html
+++ b/views/index.html
@@ -68,7 +68,7 @@
       <div class="col-lg-12 text-center">
         <p class="lead">
 			<div class="login-form">
-				<form action="/submit" method="post">
+				<form action="" method="post">
 					<h2 class="text-center">Log in</h2>       
 					<div class="form-group">
 						<input type="text" class="form-control" name="name" placeholder="Username" required="required">
