--- a/views/login.ejs
+++ b/views/login.ejs
@@ -40,12 +40,11 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active">
-							<a class="nav-link" href="/">Strona główna
-								<span class="sr-only">(current)</span>
-							</a>
+							<a class="nav-link" href="/">Strona główna</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/login">Login</a>
+							<a class="nav-link" href="/login">Login
+								<span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/register">Register</a>
