--- a/views/register.html
+++ b/views/register.html
@@ -40,15 +40,14 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active">
-							<a class="nav-link" href="/">Strona główna
-								<span class="sr-only">(current)</span>
-							</a>
+							<a class="nav-link" href="/">Strona główna</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/login">Login</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/register">Register</a>
+							<a class="nav-link" href="/register">Register
+								<span class="sr-only">(current)</span></a>
 						</li>
 					</ul>
 				</div>
@@ -60,7 +59,7 @@
 					<p class="lead">
 						<div class="login-form">
 							<form action="" method="post">
-								<h2 class="text-center">Log in</h2>       
+								<h2 class="text-center">Register</h2>       
 								<div class="form-group">
 									<input type="text" class="form-control" name="name" placeholder="Username" required="required">
 								</div>
