--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,15 +39,18 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
-						<li class="nav-item active">
+						<li class="nav-item">
 							<a class="nav-link" href="/">Strona główna</a>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item active">
 							<a class="nav-link" href="/login">Login
 								<span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/register">Register</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/lab4">LAB4</a>
 						</li>
 					</ul>
 				</div>
