--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,8 +76,8 @@
 							<tr>
 								<td><%=data[i].id%></td>
 								<td><%=data[i].name%></td>
-								<td><%=data[i].joined.toISOString()%></td>
-								<td><%=data[i].lastvisit.toISOString()%></td>
+								<td><%=Date(data[i].joined).toISOString()%></td>
+								<td><%=new Date(data[i].lastvisit).toISOString()%></td>
 								<td><%=data[i].counter%></td>
 							</tr>
 							<% }
