--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,32 @@
 		</style>
 	</head>
 	<body>
+		<div class="modal" tabindex="-1">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title">PostgreSQL DB status</h5>
+						<button type="button" class="close" data-dismiss="modal">&times;</button>                
+					</div>
+					<div class="modal-body">
+						<%
+							if(isConnected) {
+						%>
+							<p>Połączono z bazą danych</p>
+						<%
+							} else {
+						%>
+							<p>Nie połączono z bazą danych</p>
+						<%
+							}
+						%>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
+					</div>
+				</div>
+			</div>
+		</div>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
 			<div class="container">
 				<a class="navbar-brand" href="/">HEROKU</a>
@@ -71,7 +97,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							<% if(data.length){ 
+							<% if(data.length && isConnected){ 
 								for(var i = 0;i < data.length;i++) { 
 									var joined = new Date(parseInt(data[i].joined));
 									var lastvisit = new Date(parseInt(data[i].lastvisit));
