--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,6 +29,11 @@
 				font-weight: bold;
 			}
 		</style>
+		<script>
+			$(document).ready(function(){
+				$("#myModal").modal('show');
+			});
+		</script>
 	</head>
 	<body>
 		<div class="modal" tabindex="-1">
