--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
 		</script>
 	</head>
 	<body>
-		<div class="modal" tabindex="-1">
+		<div id="myModal" class="modal" tabindex="-1">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
