--- a/views/error.ejs
+++ b/views/error.ejs
@@ -33,50 +33,11 @@
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-		<script>
-			$(document).ready(function(){
-				$("#myModal").modal('show');
-			});
-		</script>
 	</head>
 	<body>
-		<div id="myModal" class="modal" tabindex="-1">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title">PostgreSQL DB status</h5>
-						<button type="button" class="close" data-dismiss="modal">&times;</button>                
-					</div>
-					<div class="modal-body">
-						<%
-							if(isConnected) {
-						%>
-							<p>Połączono z bazą danych</p>
-						<%
-							} else {
-						%>
-							<p>Nie połączono z bazą danych</p>
-						<%
-							}
-						%>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
-					</div>
-				</div>
-			</div>
-		</div>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
 			<div class="container">
-				<a class="navbar-brand" href="/">HEROKU
-				<%
-					if(loggedin) {
-				%>
-					Witaj <b><%=name%></b> !
-				<% } else { %>
-					Zaloguj się
-				<% } %>
-				</a>
+				<a class="navbar-brand" href="/">HEROKU</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -87,20 +48,15 @@
 								<span class="sr-only">(current)</span>
 							</a>
 						</li>
-						<%
-							if(loggedin) {
-						%>
-							<li class="nav-item">
-								<a class="nav-link" href="/logout">Logout</a>
-							</li>
-						<% } else { %>
-							<li class="nav-item">
+						<li class="nav-item">
+							<a class="nav-link" href="/logout">Logout</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="/login">Login</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/register">Register</a>
 						</li>
-						<% } %>
 						<li class="nav-item">
 							<a class="nav-link" href="/lab4">LAB4</a>
 						</li>
