--- a/views/error.ejs
+++ b/views/error.ejs
@@ -49,9 +49,6 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/logout">Logout</a>
-						</li>
-						<li class="nav-item">
 							<a class="nav-link" href="/login">Login</a>
 						</li>
 						<li class="nav-item">
@@ -65,10 +62,10 @@
 			</div>
 		</nav>
 		<div class="container">
-			<div class="row">
+			<div class="row text-center">
 				<h1>Nie udało się zalogować/zarejestrować</h1>
-				<h3>Przy rejestracji mogłeś podać login, który jest już w bazie danych</h3>
-				<h3>Przy logowaniu mogłeś podać login, którego nie ma bazie danych</h3>
+				<h4>Przy rejestracji mogłeś podać login, który jest już w bazie danych</h4>
+				<h4>Przy logowaniu mogłeś podać login, którego nie ma bazie danych</h4>
 			</div>
 		</div>
 	</body>
